feat:Add Volleyball to English and Japanese dictionaries
This update includes the addition of the word "Volleyball" with its appropriate translations in both the English and Japanese language files. The change ensures that the application supports facility booking for Volleyball, enhancing its multi-lingual capabilities.

--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -11,6 +11,7 @@
     "area": "Area",
     "search": "Search Available Facilities",
     "sports": {
+      "volleyball": "Volleyball",
       "tennis": "Tennis",
       "basketball": "Basketball",
       "soccer": "Soccer",
