--- a/facility-booking/app/lib/i18n/dictionaries/ja.json
+++ b/facility-booking/app/lib/i18n/dictionaries/ja.json
@@ -11,6 +11,7 @@
     "area": "エリア",
     "search": "空き施設を検索",
     "sports": {
+      "volleyball": "バレーボール",
       "tennis": "テニス",
       "basketball": "バスケットボール",
       "soccer": "サッカー",
