feat:Add Table Tennis entry to English and Japanese dictionaries
This update enhances the i18n dictionaries by including a "Table Tennis" entry, allowing for consistent translation across languages. It ensures that users can see the correct translation when dealing with table tennis-related features.

--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -15,7 +15,8 @@
       "tennis": "Tennis",
       "basketball": "Basketball",
       "soccer": "Soccer",
-      "swimming": "Swimming"
+      "swimming": "Swimming",
+      "tableTennis": "Table Tennis"
     },
     "userTypes": {
       "adult": "Adult",
