--- a/facility-booking/app/lib/i18n/dictionaries/ja.json
+++ b/facility-booking/app/lib/i18n/dictionaries/ja.json
@@ -15,7 +15,8 @@
       "tennis": "テニス",
       "basketball": "バスケットボール",
       "soccer": "サッカー",
-      "swimming": "水泳"
+      "swimming": "水泳",
+      "tableTennis": "卓球"
     },
     "userTypes": {
       "adult": "一般",
