chore:Add new user types for middle and elementary school students.
Expanded the "userTypes" category in the English and Japanese i18n dictionaries to include "Middle School Student" and "Elementary School Student." This allows for more specific categorization and enhances the user interface by providing clearer options for different age groups.

--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -20,7 +20,8 @@
     },
     "userTypes": {
       "adult": "Adult",
-      "student": "Student"
+      "middleSchool": "Middle School Student",
+      "elementarySchool": "Elementary School Student"
     },
     "areas": {
       "izumo": "Izumo",
