--- a/facility-booking/app/lib/i18n/dictionaries/ja.json
+++ b/facility-booking/app/lib/i18n/dictionaries/ja.json
@@ -20,7 +20,8 @@
     },
     "userTypes": {
       "adult": "一般",
-      "student": "学生"
+      "middleSchool": "中学生",
+      "elementarySchool": "小学生"
     },
     "areas": {
       "izumo": "出雲",
