chore:Add new sports translations in English and Japanese
This update expands the facility booking dictionaries by adding translations for several sports, including Mini Basketball, Soft Volleyball, and Archery, among others, in both English and Japanese. This enhancement improves the comprehensiveness of the available sports, providing a more inclusive and accurate translation list for users.

--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -11,12 +11,21 @@
     "area": "Area",
     "search": "Search Available Facilities",
     "sports": {
-      "volleyball": "Volleyball",
-      "tennis": "Tennis",
       "basketball": "Basketball",
+      "miniBasketball": "Mini Basketball",
+      "volleyball": "Volleyball",
+      "softVolleyball": "Soft Volleyball",
+      "badminton": "Badminton",
+      "handball": "Handball",
+      "futsal": "Futsal",
+      "tableTennis": "Table Tennis",
+      "spongeTennis": "Sponge Tennis",
+      "dodgeBall": "DodgeBall",
+      "archery": "Archery",
+      "newSport": "New Sport",
+      "tennis": "Tennis",
       "soccer": "Soccer",
-      "swimming": "Swimming",
-      "tableTennis": "Table Tennis"
+      "swimming": "Swimming"
     },
     "userTypes": {
       "adult": "Adult",
