chore:Remove unused sports translations from the dictionaries.
This change eliminates several sports terms from the English and Japanese language files, including tennis, soccer, and swimming. The update focuses on maintaining only required translations, ensuring consistency and simplicity in the codebase.

--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -22,10 +22,7 @@
       "spongeTennis": "Sponge Tennis",
       "dodgeBall": "DodgeBall",
       "archery": "Archery",
-      "newSport": "New Sport",
-      "tennis": "Tennis",
-      "soccer": "Soccer",
-      "swimming": "Swimming"
+      "newSport": "New Sport"
     },
     "userTypes": {
       "adult": "Adult",
