chore:Add new area translations to English and Japanese dictionaries
Three new areas: Hirata, Taki, and Taisha, were added to the existing areas section in both the English and Japanese JSON dictionaries. This update enhances the translation coverage in the facility booking application.

--- a/facility-booking/app/lib/i18n/dictionaries/ja.json
+++ b/facility-booking/app/lib/i18n/dictionaries/ja.json
@@ -31,6 +31,9 @@
     },
     "areas": {
       "izumo": "出雲",
+      "hirata": "平田",
+      "taki": "多岐",
+      "taisha": "大社",
       "hikawa": "斐川"
     }
   },
