--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -31,6 +31,9 @@
     },
     "areas": {
       "izumo": "Izumo",
+      "hirata": "Hirata",
+      "taki": "Taki",
+      "taisha": "Taisha",
       "hikawa": "Hikawa"
     }
   },
