--- a/facility-booking/app/lib/i18n/dictionaries/en.json
+++ b/facility-booking/app/lib/i18n/dictionaries/en.json
@@ -49,7 +49,8 @@
     "startTime": "Start Time",
     "endTime": "End Time",
     "confirm": "Confirm Booking",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "reserve": "Reserve"
   },
   "form": {
     "date": "Select Date",
